travels border spacing fixed

--- a/www/styles/style-responsive.css
+++ b/www/styles/style-responsive.css
@@ -28,10 +28,6 @@
 		width: 222px;
 		height: 222px;
 	}
-
-	#travels .travel img {
-		float: left;
-	}
 }
 
 @media screen and (max-width: 722px) {
